# QA_Challenges_Question_2

./: .gitignore  AppiumEnvironment.py  README.md  conftest.py  pyproject.toml  report.html
core/: AppiumEnvironment.py
locators/: forecast_screen.py
page/: basepage.py
tests/: test_weather_forecast.py
utils/: date_utils.py
